--- a/visualizer/Cargo.toml
+++ b/visualizer/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2021"
 [dependencies]
 robotics_lib = { version = "0.1.21", registry = "kellnr" }
 oxagaudiotool = { version = "0.2.0", registry = "kellnr" }
-oxagworldgenerator = { version = "0.1.0",  registry = "kellnr"}
+oxagworldgenerator = { version = "0.1.2",  registry = "kellnr"}
 rizzler_rust_and_furious = { version = "0.1.0", registry = "kellnr"}
 rstykrab_cache = { version ="0.1.0", registry = "kellnr"}
+ggez = "0.9.3"
+rand = "0.8"
+strum = "0.25.0"
+strum_macros = { version = "0.25.3", features = [] }
