--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "rust-analyzer.linkedProjects": [
         ".\\visualizer\\Cargo.toml",
         ".\\visualizer\\Cargo.toml",
+        ".\\visualizer\\Cargo.toml",
         ".\\visualizer\\Cargo.toml"
     ]
 }
