visualizable_robot proof of concept

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         ".\\visualizer\\Cargo.toml",
         ".\\visualizer\\Cargo.toml",
         ".\\visualizer\\Cargo.toml",
+        ".\\visualizer\\Cargo.toml",
         ".\\visualizer\\Cargo.toml"
     ]
 }
