create lambda replaced by RobotCreator trait

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         ".\\visualizer\\Cargo.toml",
         ".\\visualizer\\Cargo.toml",
         ".\\visualizer\\Cargo.toml",
+        ".\\visualizer\\Cargo.toml",
         ".\\visualizer\\Cargo.toml"
     ]
 }
