--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,11 @@
         ".\\visualizer\\Cargo.toml",
         ".\\visualizer\\Cargo.toml",
         ".\\visualizer\\Cargo.toml",
+        ".\\visualizer\\Cargo.toml",
+        ".\\visualizer\\Cargo.toml",
+        ".\\visualizer\\Cargo.toml",
+        ".\\visualizer\\Cargo.toml",
+        ".\\visualizer\\Cargo.toml",
         ".\\visualizer\\Cargo.toml"
     ]
 }
