--- a/OhCrabFinalProject/Cargo.toml
+++ b/OhCrabFinalProject/Cargo.toml
@@ -17,9 +17,13 @@ rstykrab_cache = { version ="0.1.0", registry = "kellnr"}
 
 OhCrab_collection =  { version ="0.1.0", registry = "kellnr"}
 
-ggegui = "0.3.8"
+egui = "0.24.1"
+egui_extras = {version = "0.24.1", features = ["all_loaders"] }
+image = { version = "0.24", features = ["jpeg", "png"] } 
+ggegui = { git = "https://github.com/NemuiSen/ggegui.git", branch = "master" }
+ggez = "0.9.1"
+itertools = "0.12.0"
 
-ggez = "0.9.3"
 rand = "0.8"
 strum = "0.25.0"
 strum_macros = { version = "0.25.3", features = [] }
