--- a/OhCrabFinalProject/Cargo.toml
+++ b/OhCrabFinalProject/Cargo.toml
@@ -14,6 +14,7 @@ oxagaudiotool = { version = "0.2.0", registry = "kellnr" }
 oxagworldgenerator = { version = "0.1.2",  registry = "kellnr"}
 rizzler_rust_and_furious = { version = "0.1.5", registry = "kellnr"}
 rstykrab_cache = { version ="0.1.0", registry = "kellnr"}
+rust_eze_tomtom = { version = "1.0.0", registry = "kellnr"}
 
 OhCrab_collection =  { version ="0.1.0", registry = "kellnr"}
 
