--- a/OhCrabFinalProject/Cargo.toml
+++ b/OhCrabFinalProject/Cargo.toml
@@ -20,10 +20,13 @@ OhCrab_collection =  { version ="0.1.0", registry = "kellnr"}
 
 egui = "0.24.1"
 egui_extras = {version = "0.24.1", features = ["all_loaders"] }
-image = { version = "0.24", features = ["jpeg", "png"] } 
+image = { version = "0.24", features = ["jpeg", "png"] }
+itertools = "0.12.0"
+log = "0.4.20"
 ggegui = { git = "https://github.com/NemuiSen/ggegui.git", branch = "master" }
 ggez = "0.9.1"
-itertools = "0.12.0"
+simple-logging = "2.0.2"
+
 
 rand = "0.8"
 strum = "0.25.0"
